Update resume for 2025.
Also fix silly typo.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h1>Sarah Robinson</h1>
 
             <div class="flow-text">
-                Software Engineer.
-                <br />
+                <p>Software Engineer.</p>
+                <p>
                 You can find me on <a href="https://www.linkedin.com/in/sarah-robinson-01075578/">LinkedIn</a>.
-                My full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.
+                My full resume is also available <a href="Sarah_Robinson_Resume.pdf">as a PDF</a>.</p>
             </div>
 
             <h3>Experience</h3>
@@ -25,13 +25,13 @@
                     <div class="collapsible-header active waves-effect">Software Engineer, Google, August 2017 - Present.</div>
                     <div class="collapsible-body"><p>Individual contributor and Tech Lead for the
                         <a href="https://cloud.google.com/load-balancing/docs/passthrough-network-load-balancer" target="_blank">
-                        External Passthrough Network Loadbalancing</a> team. Distrubted systems with a networking flavor; C++, Python, Golang.</p></div>
+                        External Passthrough Network Loadbalancing</a> team. Distributed systems with a networking flavor; C++, Python, Golang.</p></div>
                 </li>
                 <li>
                     <div class="collapsible-header waves-effect">Student Web Programmer, Mt. Holyoke College Web Team, June 2014 - May 2017.</div>
                     <div class="collapsible-body">
                         <p>Pioneered effort to launch a <a href="https://map.mtholyoke.edu/">new campus map</a>. Python, JavaScript, Google Maps API. <br /><br /> <!-- Double break for spacing -->
-                        Develop, support, and integrate web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p>
+                        Developed, supported, and integrated web applications for the college website. PHP, <a href="https://www.drupal.org/" target="_blank">Drupal CMS</a>, HTML, CSS, JavaScript.</p>
                     </div>
                 </li>
                 <li>
@@ -39,12 +39,12 @@
                     <div class="collapsible-body"><p>Streamlined the quality analysis workflow for a particular ad format by adding new functionality to a testing tool. JavaScript, Python, Google App Engine.</p></div>
                 </li>
                 <li>
-                    <div class="collapsible-header waves-effect"><a href="https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative">MaGE Program mentor</a>, Mt. Holyoke College, Fall 2015 and Fall 2016.</div>
+                    <div class="collapsible-header waves-effect"><a href="https://wayback.archive-it.org/6289/20220713161547/https://www.mtholyoke.edu/media/google-funds-new-computer-science-initiative" target="_blank">MaGE Program mentor</a>, Mt. Holyoke College, Fall 2015 and Fall 2016.</div>
                     <div class="collapsible-body"><p>Mentored students in introductory courses as part of an initiative to increase retention of women in computer science programs.</p></div>
                 </li>
                 <li>
                     <div class="collapsible-header waves-effect">Software Engineering Intern, Google, Summer 2015.</div>
-                    <div class="collapsible-body"><p>Worked with a Google Maps team to add a feature to StreetView for Google Maps for Android. Java.</p></div>
+                    <div class="collapsible-body"><p>Added a feature to indoor view in StreetView for Google Maps for Android. Java.</p></div>
                 </li>
                 <li>
                     <div class="collapsible-header waves-effect">Computer Science TA, Mt. Holyoke College, Spring 2014.</div>
